--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>test</title>
-        <link rel="stylesheet" href="./css/main.css">
+        <title>CRPG</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.2/dist/es-module-shims.js"></script>
@@ -17,6 +17,6 @@
         <div id="content">
             <canvas id="main"></canvas>
         </div>
-        <script type="module" src="./js/main.js"></script>
+        <script type="module" src="js/main.js"></script>
     </body>
 </html>
