--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             }
         </script>
         <div id="content">
-            <canvas id="main"></canvas>
+            <div id="elements"></div>
+            <div id="main"></div>
         </div>
         <script type="module" src="js/main.js"></script>
     </body>
